--- a/workspace/judy-sys/Cargo.toml
+++ b/workspace/judy-sys/Cargo.toml
@@ -17,7 +17,7 @@ include = ["README.md", "LICENSE", "COPYRIGHT", "src/**/*.rs", "benches/**/*.rs"
 build = "src/build.rs"
 # Relative to Cargo.toml
 readme = "README.md"
-publish = false
+publish = true
 version = "0.0.1"
 
 [dependencies]
