--- a/workspace/judy-wrap/Cargo.toml
+++ b/workspace/judy-wrap/Cargo.toml
@@ -15,7 +15,7 @@ repository = "https://github.com/lemonrock/judy.git"
 exclude = ["*"]
 include = ["README.md", "LICENSE", "COPYRIGHT", "src/**/*.rs", "benches/**/*.rs", "examples/**/*.rs", "tests/**/*.rs", "Cargo.toml", "rustfmt.toml", "clippy.toml", "lib/**/*", "src/**/*.h", "tools/**/*", "bindgen-wrapper.conf.d/**/*", "compile-*.conf.d/**/*"]
 readme = "README.md"
-publish = false
+publish = true
 version = "0.0.1"
 
 [dependencies]
