--- a/workspace/judy-sys/Cargo.toml
+++ b/workspace/judy-sys/Cargo.toml
@@ -13,12 +13,12 @@ documentation = "https://github.com/lemonrock/judy/blob/master/README.md"
 homepage = "https://github.com/lemonrock/judy-sys"
 repository = "https://github.com/lemonrock/judy.git"
 exclude = ["*"]
-include = ["README.md", "LICENSE", "COPYRIGHT", "src/**/*.rs", "benches/**/*.rs", "examples/**/*.rs", "tests/**/*.rs", "Cargo.toml", "rustfmt.toml", "clippy.toml", "lib/**/*", "src/**/*.h", "tools/**/*", "bindgen-wrapper.conf.d/**/*", "compile-*.conf.d/**/*"]
+include = ["README.md", "LICENSE", "COPYRIGHT", "src/**/*.rs", "benches/**/*.rs", "examples/**/*.rs", "tests/**/*.rs", "Cargo.toml", "rustfmt.toml", "clippy.toml", "lib/**/*", "src/**/*.h", "tools/**/*", "bindgen-wrapper.conf.d/**/*", "compile-*.conf.d/config/**/*"]
 build = "src/build.rs"
 # Relative to Cargo.toml
 readme = "README.md"
 publish = true
-version = "0.0.1"
+version = "0.0.2"
 
 [dependencies]
 libc = "0.2"
