--- a/workspace/judy-sys/Cargo.toml
+++ b/workspace/judy-sys/Cargo.toml
@@ -14,11 +14,12 @@ homepage = "https://github.com/lemonrock/judy-sys"
 repository = "https://github.com/lemonrock/judy.git"
 exclude = ["*"]
 include = ["README.md", "LICENSE", "COPYRIGHT", "src/**/*.rs", "benches/**/*.rs", "examples/**/*.rs", "tests/**/*.rs", "Cargo.toml", "rustfmt.toml", "clippy.toml", "lib/**/*", "src/**/*.h", "tools/**/*", "bindgen-wrapper.conf.d/**/*", "compile-*.conf.d/config/**/*"]
+links = "Judy"
 build = "src/build.rs"
 # Relative to Cargo.toml
 readme = "README.md"
 publish = true
-version = "0.0.2"
+version = "0.0.3"
 
 [dependencies]
 libc = "0.2"
