--- a/workspace/judy-sys/Cargo.toml
+++ b/workspace/judy-sys/Cargo.toml
@@ -23,7 +23,13 @@ include = [
 	"lib/**/*",
 	"src/**/*.rs",
 	"src/**/*.h",
-	"tools/**/*",
+	"tools/bindgen-wrapper/bindgen-wrapper",
+	"tools/bindgen-wrapper/COPYRIGHT",
+	"tools/bindgen-wrapper/LICENSE",
+	"tools/bindgen-wrapper/README.md",
+	"tools/bindgen-wrapper/rustfmt.toml",
+	"tools/build-under-cargo",
+	"tools/compile-judy",
 	"compile-*.conf.d/config/**/*",
 	"bindgen-wrapper.conf.d/header-overrides/**/*",
 	"bindgen-wrapper.conf.d/configuration.sh",
